Prevent header line break on desktop

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -284,6 +284,10 @@ a:visited:hover {
 }
 
 @media (min-width: 630px) {
+	.main-header {
+		white-space: nowrap;
+	}
+
 	.scale-rotate .pusher {
 		-webkit-transform-style: preserve-3d;
 		transform-style: preserve-3d;
